Money Manager 18.3.0
* Parser for Raiffeisen Bank account CSV statement
* Log file moved to .money-manager/logs directory
* Operation history download from Yandex Money account
* Java 10