@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.panteleyev</groupId>
     <artifactId>money-manager</artifactId>
-    <version>18.2.0</version>
+    <version>18.3.0</version>
     <packaging>jar</packaging>
     <name>MoneyManager</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>9</maven.compiler.source>
-        <maven.compiler.target>9</maven.compiler.target>
+        <maven.compiler.source>10</maven.compiler.source>
+        <maven.compiler.target>10</maven.compiler.target>
         <app.main.class>org.panteleyev.money.MoneyApplication</app.main.class>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
@@ -30,22 +31,27 @@
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>9.0.0-9</version>
+            <version>9.0.0-module</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.42-9</version>
+            <version>5.1.42-module</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
-            <version>1.5-9</version>
+            <version>1.5-module</version>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.11.3-9</version>
+            <version>1.11.2-module</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2-module</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
@@ -68,6 +74,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
+                <configuration>
+                    <release>10</release>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                        <version>6.1</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -104,7 +120,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20.1</version>
+                <version>2.21.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                        <version>6.1</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -124,8 +147,9 @@
                             <arguments>
                                 <argument>-deploy</argument>
                                 <argument>-BjvmOptions=-XX:NewRatio=1</argument>
-                                <argument>-BjvmOptions=--add-exports javafx.base/com.sun.javafx.event=controlsfx</argument>
-                                <argument>-BjvmOptions=--add-modules java.xml.bind</argument>
+                                <argument>-BjvmOptions=--add-exports javafx.base/com.sun.javafx.event=controlsfx
+                                </argument>
+                                <argument>-BjvmOptions=-Dfile.encoding=UTF-8</argument>
                                 <argument>-native</argument>
                                 <argument>exe</argument>
                                 <argument>-name</argument>
@@ -161,8 +185,9 @@
                             <arguments>
                                 <argument>-deploy</argument>
                                 <argument>-BjvmOptions=-XX:NewRatio=1</argument>
-                                <argument>-BjvmOptions=--add-exports javafx.base/com.sun.javafx.event=controlsfx</argument>
-                                <argument>-BjvmOptions=--add-modules java.xml.bind</argument>
+                                <argument>-BjvmOptions=--add-exports javafx.base/com.sun.javafx.event=controlsfx
+                                </argument>
+                                <argument>-BjvmOptions=-Dfile.encoding=UTF-8</argument>
                                 <argument>-native</argument>
                                 <argument>pkg</argument>
                                 <argument>-name</argument>
@@ -194,8 +219,9 @@
                             <arguments>
                                 <argument>-deploy</argument>
                                 <argument>-BjvmOptions=-XX:NewRatio=1</argument>
-                                <argument>-BjvmOptions=--add-exports javafx.base/com.sun.javafx.event=controlsfx</argument>
-                                <argument>-BjvmOptions=--add-modules java.xml.bind</argument>
+                                <argument>-BjvmOptions=--add-exports javafx.base/com.sun.javafx.event=controlsfx
+                                </argument>
+                                <argument>-BjvmOptions=-Dfile.encoding=UTF-8</argument>
                                 <argument>-native</argument>
                                 <argument>rpm</argument>
                                 <argument>-name</argument>
